[package]
name = "ytranscript"
version = "0.1.0"
edition = "2021"
description = "ytranscript is a rust crate that provides functionality to fetch YouTube video transcripts."
license = "MIT"
repository = "https://github.com/rudrodip/ytranscript"
homepage = "https://github.com/rudrodip/ytranscript"
documentation = "https://docs.rs/ytranscript"
readme = "README.md"
keywords = ["youtube", "transcript", "video", "rust"]
categories = ["web-programming", "parsing"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde_json = "1"